# TwentyFourtyEight

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
srcs/twentyfourtyeight/: TwentyFourtyEight.py  __main__.py  __main_auto__.py
