[metadata]
name = twentyfourtyeight

[options]
packages = find:
package_dir = =srcs
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.
 
[options.packages.find]
where = srcs

[options.entry_points]
console_scripts =
    2048 = twentyfourtyeight.__main__:main
    2048_autom = twentyfourtyeight.__main_auto__:main
